# monitor-bot

./: .gitignore  README.md  braiins-monitor.cabal  monitor.py
app/: Main.hs
deploy/: config.json
deploy/systemd/: braiins-monitor.service  braiins-monitor.timer
src/: BraiinsMonitor.hs
